<resources>
    <string name="app_name">EulerityProject</string>

    <string name="retry">Retry</string>
    <string name="copyRight">This project was created by Jasur Shukurov™ in 24 hours</string>
    <string name="ed_hint_text">Write your text here</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="post">Post</string>
    <string name="preview">Preview</string>

</resources>
